# LogOS

./: .gitignore  Cargo.toml  Interactive_README.md  README.md  TRIWEAVON_OS.md  build_diagram.py  build_themes.py  cad-diagram-designer.skill  codex.md  coherence.env.example  diagram.txt  flake.nix  gear_core.py  ignite_triweavon.py  triweavon_codex_scanner.py  wrangler.toml
agda/: .gitignore  Makefile  TriWeavon.agda-lib
agda/scripts/: check.ps1  html.ps1  vendor.ps1
agda/src/: Everything.agda  FixedPoints.agda  K22_QDI_Functor.agda  MerleauPontyChiasm.agda  MerleauPontyFleshOntology.agda  PathInductionExploration.agda  RezkCompletionSimplicialSets.agda  SerreScarPathInduction.agda  TriWeavonPathInduction.agda  TriWeavonPhilosophy.agda
agda/src/TriWeavon/: Core.agda  (+3 more)
crates/triweavon-cudarc/: Cargo.toml  README.md
crates/triweavon-cudarc/src/: coherence.rs  error.rs  kernel.rs  lib.rs  manifold.rs  polynomial.rs  prelude.rs  sheaf.rs
cutiles/cutile/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
cutiles/cutile/docs/: backend-architecture.md  entropy-kernel-performance.md  formal-executable-mapping.md  gpu-acceleration-roadmap.md  tqec-visualization.md
cutiles/cutile/examples/: basic_hit.rs  entropy_benchmark.rs  tqec_braid_viz.rs  tqec_concurrent_cascade.rs
cutiles/cutile/kernels/: blackwell_entropy_v2.cu  entropy_reduce.wgsl
cutiles/cutile/scripts/: build_ptx.ps1  build_ptx.sh
cutiles/cutile/src/: clamping.rs  error.rs  lib.rs  traits.rs
cutiles/cutile/src/backend/: cpu.rs  cuda.rs  mod.rs  types.rs  wgpu.rs
cutiles/cutile/src/core/: entropy.rs  hexaflake.rs  mod.rs  srac.rs
cutiles/cutile/src/hit/: cubical.rs  mod.rs  triweavon_hit.rs
cutiles/cutile/src/viz/: braid.rs  mod.rs  palette.rs  tqec_syndrome.rs
cutiles/cutile/tests/: backend.rs  clamping.rs  cuda_fallback.rs  integration.rs
docs/: RESON8-MASTER-PRINT-RESOURCE.md  SESF_CHESSBOARD_SCHEMA.json  SESF_CHESSBOARD_TELEMETRY_LOCK.md  SESF_LOGOS_INTEGRATION_LOCK.md  SESF_NAMESPACE_MAP.json
notebooks/: AUKUS_Chessboard.ipynb  aukus_moves.jsonl  aukus_witness_latest.json
terminals/: 1.txt  2.txt
(+73 files in other folders)
